@@ -1,10 +1,10 @@
 DEFINED_PHASES=install unpack
 DESCRIPTION=Compatibility libc6 libraries for Loki games
 HOMEPAGE=http://www.gentoo.org/
-KEYWORDS=amd64 x86
+KEYWORDS=~amd64 ~x86
 LICENSE=GPL-2
 RDEPEND=x86? ( sys-libs/lib-compat ) amd64? ( app-emulation/emul-linux-x86-compat app-emulation/emul-linux-x86-sdl )
 RESTRICT=strip
 SLOT=0
 SRC_URI=http://www.blfh.de/gentoo/distfiles/lib-compat-loki-0.2.tar.bz2 http://dev.gentoo.org/~wolf31o2/sources/lib-compat-loki/lib-compat-loki-0.2.tar.bz2
-_md5_=7bf1742045a12576ec17920d445f9e6a
+_md5_=fc1a4141cc28474a85c7a090f8639482
