@@ -4,25 +4,29 @@ Hash: SHA256
 DIST bleachbit-0.9.5.tar.bz2 338227 SHA256 dd8ecded6f078efb0e421c4d43a0481411e28ef6dac6d25653cd8e3cddf196f7 SHA512 c3c20437f729ba0a56a78936d7d03011adfa8b75eb75d064802092267f562028e2f693bb46b0eca3422d61fc27abaa13c5383e2b79505b8f0c251f57ea34b9c8 WHIRLPOOL 8122d0c280518c6641769981f5a650c28431af36dce095dd282c1db5792c48de200cdbfd049250deaddae5c7778adbc975e85abf2b0f3cb7ad71f5d4613d9586
 DIST bleachbit-0.9.6.tar.bz2 340541 SHA256 4edc08b73935fba2e1ae2426ccae5eeeff9b72a36952be4f66ffbb09eb40ed81 SHA512 3bd47c3f8e8f05d49a748f4dd64823cae887d1b8f825b4b828510bf8fad0c1d0902cb176c732ba70fe23a2be2615a63f66f0a3a743ef228a875209a2e01a8c54 WHIRLPOOL 6b7d763b2c0f3092281cd5a3dbb09c0c265b24f2b76502b63344d82b0c6f75d0c759ed78c244324c43e198e1fa023b6a07736bae38b7ba74090e6c95bce8a545
 DIST bleachbit-1.0.tar.bz2 340977 SHA256 1b18c7ae2eadbe6c799159f2cc04f5b99dfbb8d3b87af61fa7ac192a8ce38162 SHA512 3b2d474386e93fda74034d913ef131e913c6c95a2d83c27d9929a96b45b05ae035cdf94eb943448b3b4222c0b338ce495e470441ae76f32fc5045c2352dab0ce WHIRLPOOL 3728b6a9113cfbfc666504fd95360d4fb4fa93f510c7f84f9fc461b8955812e26c397f8c603f5cb7789d90390c3bed6531ac8dc3af16df09b8e88b68a8589f86
+DIST bleachbit-1.2.tar.bz2 346530 SHA256 655b6e1ef7d5658c8e1a8e62b2c4ae0e4b1af484e47f1fb93a735892bbd2eea3 SHA512 a84881789c408335493b0923b51e66940295c430b2ea8838e420603ef8ee7548a0a1d605564070034bfe3a2d9159015e403db14470d6b33cf5260c3e4b43d267 WHIRLPOOL 262b7261188097d36584019a38ce8ef291572b85be318f39a6bb603546a39c733b9da761763b1234b8762bae4bde8dd0ee7cb8bac5abcebe3541f81025f5fff8
 EBUILD bleachbit-0.9.5.ebuild 1326 SHA256 d87ebebade11e7f01b37297a13c69b70ea4240c76bf5e93df6ae143e688abc82 SHA512 cd8de704fcd949dbe2b9c9c4030e47047f8bad2656494a8c5d3ebdeb246f5f90415c2d6636010c0ceb2af4bcae74a6ba0609fe12f47b83ceef16dd07e624f31a WHIRLPOOL e496a74bcd96082d4d2d8c3991e876575e6098b99cef85dd512f62f5d49570f033c24563a61d4b0a738a7667f5f86c84681729e747eea0945187d8ba2c9a57ec
 EBUILD bleachbit-0.9.6.ebuild 1696 SHA256 b6ee29d0c355791b294e3e453483b257809be4e755fd57e68365e58ae858cc29 SHA512 8bbf3c607faf830b46c5238699df0c36f1bab87ca3b00a992e9f4e102841f897a66e835455867957b2645b7a0f8b0780a55c76f88babb54f23f6f226d3d50fb6 WHIRLPOOL e1e7ca8d31a56d6bd16d7ca6deef1773bad422bf8980d206b8ad291b65aaaeb522be73c482fa7f5c0155bba40500f93a6e604f69e976deeaeda8b98e8afdf6b5
 EBUILD bleachbit-1.0.ebuild 1697 SHA256 b83d9e4ab92bbdd70a43b3a4614845d5fc361967456ad60dd8566454b9d44380 SHA512 4ad3b57e8b97d56a4684e077ddd30e5fba4742a67f9c7394eced753b8d420d34d1f9ae0e48900da436c12993470c985d989e86159be74d67dcfabe3cd35a6934 WHIRLPOOL 170c5a282f0187dbcd6606b0e4174fa3481afe95f5c74a29393e240fbb3feb5bb4b14dca0af0a3fc69af8e66658fdaab23719d28a92378a80dd8ea9762c14af9
-MISC ChangeLog 3656 SHA256 28cfc34c8f17bab7fe0664b1b9f03791e2740a1121a44d65886cf38d7d2cda37 SHA512 360dc718cac0032e8738286cd5a97cd8a600653ef8b898ff9f9bbbbeea2fa32ad7006c9f34b11a5a7520098ff001482b1dd80f96220371955f7a75d825a2c489 WHIRLPOOL b08f47c5d170306bb5e3e0d0540f5ae2bd41d9b3181176158919787b169f62c421bb8da5fc73a2c705ff58aa03c4b607c59060bb7b999c96df24f607b12d1090
+EBUILD bleachbit-1.2.ebuild 1710 SHA256 26ee124eacad9e171a6d064d45511fa9037e418af3e3b3e2e87b460c06bbaad0 SHA512 06faf0b77d8d499ba41924aa455a96ce4a6a17833232c2fe2b805083d4114122c08360d6de18b105024ccd28dbe5f1b7eee3c3d57323f2813080f82d0ca0ac09 WHIRLPOOL ce7055d63fbeb2563f028a650101e241bfb913e221bb49f6e45151abb525f810e66f93f7a09abe31a0b4f042691776b3899e12a292438725e70c913bbbac4351
+MISC ChangeLog 3837 SHA256 fd4d62bce1f16304588d076e84aafab875b5912551c027c4ad602b33cf249d67 SHA512 384e4a1086d6a3c8e718d2073db4a761d22ce0c359b73e8861ea0260dffd980f3a3e56322cffb070b38b39b34e195925939f98ea7311efd8dc1ab99aef478aa3 WHIRLPOOL 7824784932e41d48d94ab2c65e7b0fcb9a6b8c5ddb8a42e70df04acd2dc7138e3068511d036b5a8a02cb0e60c2e9bc2ce95940ded4fef0e86aa8b34086cea587
 MISC metadata.xml 370 SHA256 9860ea394d24a571dc6d7474afaaa7f68a8d1b3b229e8e9c04f3395455cfac4d SHA512 5d7b760d4983b0826468f7826a65d10bfe0400edf0c5e1ccd5c97778052d96457d7768225a8831fb618c8c5d6cf034db41d4620a04c022f0a5badd81feafb641 WHIRLPOOL 0ba30e7a552794c479b2b1c99cc911c5a38330dcb39e7f5462b6a18e5106ff593807d494efee5cce4ad14cbc9517f49c0455cdd0768dfe9ef5114762e94aee47
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0
 
-iQIcBAEBCAAGBQJSpKcbAAoJEKMbvrI6BRdGTEgQAIx58yFB6w3GiGnsXzb1fFG6
-rpfQml9cL1f9xEGSobwd1YxU8qkk0VToszm5j6UJk/H/6X7o82wz3dNHDN1h3yX3
-GT86yL2g6/U2voI37d/2QW25NSZlbkfllSVC6FuJNXmqeuGKhmaPf8Ud0M6aB1MO
-V63PZgNa7OMkpgYCWO97VwrVc/Ha26LNuN4AWZkTy90Tky4870WqAeQaiVHcLKe/
-NnFXMtnOiAYsD+aOs8xlOjp/ZX69KBC4aVxzydwah/nr5B0JP9kd8WhVtHpjVwJd
-5a7hX1pIdFn56vwhYTIy9lv739IdaVXv24BGw/t86G9qpcDRi5k8LRYkRq++lfnw
-xbYzPzyr7PtHQbQcdEvYBU3OBAzhq54bnXfPDomVQ9saSx7N9VVMWU++/kR77iP6
-J5jVPxq70Z83Ti3hsg69AFy+7A0sU8RN7+92pjWkVCwvO9M9tGv3sPIlr8NBQv7v
-2UgzdPXh01J9ZXf0ixdqUxzuvna8Avgk/oAdkgPR570XfscNFx3ANe6crZNkmGRE
-IFdAIqg4l8Qh+Z76TqVI51Tl1wq6tOQ35sTQ0uzQoup+jMIDoGkE777+688VDKKW
-ndQuT6yvTl4VZq8GO0lHjWXjwODjByHOfbLKrTBVWwL2etqC49diu3JY+uGHiHr2
-R5zaJvFNaWHVq7BqZKVh
-=ouiZ
+iQJ8BAEBCABmBQJUDDNxXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRCMjM3NDkyMkQ0OTFBMUIyMzgzNkZBMkUx
+QTVEMDIzOTc1QjA1ODNEAAoJEBpdAjl1sFg9SyMQAK5JLIhUopveYVcCfma8PlIo
+DRGqLi89Omnb2aNqkxXxT5PN4ucVk8zH2lJdhHOvgu1Z1nN4MEJynR1n772OnSjT
+2+ALsh8IjE9Bkwx5rkEenrcC3rgM8fbJ6UWF1qNmf79haQwW2fIssUTQJbEMijSg
+psqo/yg4C5iqO+Q2eEl5E0gIdTQ7S4R92/k5ohlElGQHBdXfG5GvFbBp+z5NxxVN
+HXcRK0q47Syx3ZiA+yXXcTR7ciHgPttiNZV2gaG8eh/Zb3j5sbsIhImIJAdk1z7h
+dcGR34MXhWdGTL8xyjkRREwvUwaKeTbN04j7wwqGlQSY0sqvFGaS3uNG77HD0Y0L
+2lC4tMwtUlognqZEh5vrnuLL5MxK8rHLB8J67YeeCntTOTgXWDAcBo1+hpYls+tS
+joFM8Sv5MUoVPZZ5SuSmVjXPj8lycQ6NJWc+5+QGOsCJN20ljwIEsRJ6++v8OpEL
+DqUI8aiJB6wMLDKW0S/ggWUEc/TPUP1St9WdSNtUpQR0U0gMNaMArF5QNxLjHi5y
+f6nA6rvyT5l8KgTeTItGjnSvO3ETB50GgUFlWWAo414YCx+FKiklV0P4Sp6mrD7D
+oPtA5eFPslzMwHQptXk6spHooj7Jz3RT8ruaAcoG/V9+mQzozxrsTMHGW/AoN3Vl
+bwsOEy3rqgmqmUTKWTcV
+=h9+Q
 -----END PGP SIGNATURE-----
