@@ -3,20 +3,20 @@ Hash: SHA256
 
 DIST lib-compat-loki-0.2.tar.bz2 1441552 SHA256 112b916c21f1a47d257aff721cda10a79e40efe4b75f71d696b70a0036f12234 SHA512 7a090d9bfb3cb3a184d64030f9c85070034365e83c9e11b315df98995d15933d13542069f15b7bd1dd1c4f1cfab3466c1b354bdc073172573846347ecc8c8527 WHIRLPOOL e92a57bed5a77af44fde2d310fab24feb872af6483a0b3da1ce2e914c2cc107428adfb15d86afcb44a50c7a8858093c65186f51e2c741f7bb7666b6ccd9f107a
 EBUILD lib-compat-loki-0.2-r1.ebuild 1141 SHA256 ca5d1d6041056017b17691c149edfb60ef00d5ee31408853863f2b1e6331cb35 SHA512 fb06a0081020f9928e77ffe9dedda14fd15b78978c13ec7c9ee96fdb5410657d19065d3ceba97240305d9a405193b95e90642018b1f99daa1f08ca92fb11c021 WHIRLPOOL ba609acea89c2b7d36e3615cd50cffabcd367f78d494c18a215f50ff3ae903a2e37918ef1eab92fe27f62b51fc17a7fae5b5e328297391dbaf5b651e34eca9e0
-EBUILD lib-compat-loki-0.2.ebuild 1172 SHA256 ec17f838b918e904819d6886aad4678fe4376a3b44828b7786eac77e770dbc4c SHA512 5210ec132d0b9af8c5ee0a487a00806c1d2c2a4295b1f96fa3e920f94c39078b93bd073afd57115f7f7bf5040b16e3c40e23127454e48ad04a8f77651611f80e WHIRLPOOL 1ee6413c6ad4aa435ba30a50b86d57f6267d5ea2cca282ff8863ec47416ec80d48e9056db7cae16a47458b0a3075077c531f07a6fd6876293eedb61f2a2a62f0
-MISC ChangeLog 1729 SHA256 7974577460d58f49899fbbde3779f599d8d19b527828244ab4a1525e42d551f2 SHA512 b421cac627aad0d0cc0465a7129a44220be6857de8048d4fb4a0bee21579b4dc5a72222083dd3270e82f4f52599781946308c0fe7a9a4d35fbbd4809dbee66ae WHIRLPOOL 74bd29b75f89c4aa3521cf8220c00761a5c441b84d9147bddd75c1a17bb148c3e70c420e2db7e5d93af049fdafc9c83acbb2237aafffb336f834af641a07f562
+EBUILD lib-compat-loki-0.2.ebuild 1168 SHA256 f16b1c131e3484be36d6f80051e7424342d7b917125a075d79cd4735eaa0c838 SHA512 7ba72d676bf2ccc63853a4a5a2844df8d917bf259a996a4c30e45a73ba2a6e75642df535aad2323ae09b657462b99a2855289d28a141c79f4b16da3b5c0a0daf WHIRLPOOL 9331f3db67e9226210a5027c1a3dac9ac2e97832b367ac4c46fb65a1bb3b2e29ebed612b39044d26941f93121652095663a51c440e65b8f440524af572384183
+MISC ChangeLog 1881 SHA256 ffe3f57c9fb459d616ba0bb40a328719e81321470afa0b9b6405a6db707fc113 SHA512 c1f9604d5d278545f462c298242050d7f8426a6f2c5f4bbab3bdb1fdbd79479902c994504d1eab5a7589f8709dbe5dd87aeb7997b3ea80f974edf6a1b89cf898 WHIRLPOOL a1c4ce3f4e6a1270d1e36af138e7fcdfcf76fa7a3e8e5f4bfb7dfed83efe3d99123aca3aad39106d655161787f651c97130989e3ae1e416a0a8cc60db776bbfd
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQGcBAEBCAAGBQJUCwuSAAoJEJQzkH1pP7W4CdoMAIuW8S//+rgkKMc/IemNkoYW
-z0DLBC+K4BzcQ5wWYTHSIrusaRnA+7bSpAZZiMcjWoboeUMP/f+YLmkjyScIAlMC
-SoVeFQPP2Cz3lZUsXoReodfyfAhfn0aLhWBOWLkK7pL54MCjNK1nUwuTsq3lRAVt
-c6fdJJmissbfOx8z4wzjnKD8QSg0uCN+ihsFikbUxDtHsBe3TF5tohd1ZM26l5V3
-i48KZuVa7XRongajMbVCuy+c1PRqXocJNIb0hR80M+9denIkoT83MTn0mKqg2eBG
-sCh9/rPa6YjD2jrRUfUyiH0mbxcFsidfCXj2mNFVbC4DFRQChYDe9fy9MBpQJhPc
-qK57z/apFvnN6VQfYJa45kmL9dVNfaSaC1qGr3oilrmztDGbP0ZMp2msGXOzvQHZ
-/Pijtg0rR1O13NzYDcmEyLxKGG2iX89JIhX9yZ47d/4veQnZJhBWBrqvw5gXdPLP
-GCexAmJhsN3ZMwVTdurILBd0Zyv5jLfd91U4FjC7hQ==
-=qOUj
+iQGcBAEBCAAGBQJUDC9rAAoJEJQzkH1pP7W4R7YL/1McgWg4EoGswPtGI9O61cxU
+HeF6w5Y7dsOPOu14ku4VipGdewDnG9ezwAcvHz/kpOfjUYnNjKZAGKcaKaZmgV0O
+Im0GLiiZouR9NLZ/zAIkwZ8giHLciJDItYIgh0VV1UosG9ci3VUjtCqdqVlqiXUe
+MNaX6gBu6OmP+YZafdEepN0KAvimdHpqyiL4TfWsiy8oBUI+QVCqgxmzy/jh3+Wh
+UUwqh9bRSXilczKBwpQcjH4R/IEX/E7ll3nqYR1tRaeiO7w4ZgjtIqItHRs4WAS8
+vuN9YmR0o1lja0PhBHeP6Oa7m6fSVskwUKFpt6EkxJ2kOys559G+26JNe2ZURtu1
+ZyCiRiEFvde1pNkk7HTEp/4Q5al+BgjC4FfweRH9iwajmk1OiG2ZdykTl18i6r4z
+xJpq1mL+XYLWVjYmLS+IpRC+tc/RbJ20mgzdfO61keY5a8rDDFW/BjWF/dEYYgcA
+PMLJShLfG9T7vfh0wSqi9y6NsQWY/NK5YLe8e4xSYA==
+=hUdq
 -----END PGP SIGNATURE-----
