@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/lib-compat-loki
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/lib-compat-loki/ChangeLog,v 1.8 2014/09/06 13:25:54 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/lib-compat-loki/ChangeLog,v 1.9 2014/09/07 10:11:01 ulm Exp $
+
+  07 Sep 2014; Ulrich Müller <ulm@gentoo.org> lib-compat-loki-0.2.ebuild:
+  Drop reverse dependencies of sys-libs/lib-compat to unstable, bug 517932.
 
   06 Sep 2014; Ulrich Müller <ulm@gentoo.org> lib-compat-loki-0.2-r1.ebuild:
   Don't depend on emul-linux-x86-compat on amd64.
