@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/bleachbit
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/bleachbit/ChangeLog,v 1.17 2013/12/08 17:01:11 dastergon Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/bleachbit/ChangeLog,v 1.18 2014/09/07 10:29:04 dev-zero Exp $
+
+*bleachbit-1.2 (07 Sep 2014)
+
+  07 Sep 2014; Tiziano Müller <dev-zero@gentoo.org> +bleachbit-1.2.ebuild:
+  Version bump (bug #513016), add gtk USE flag to permit headless install.
 
 *bleachbit-1.0 (08 Dec 2013)
 
